Fixed Overflow

--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ body {
 
 #gallery #image-container .image-item {
   display: block;
-  width: 700px;
+  width: 100%;
   height: 700px;
   overflow: hidden;
   text-align: center;
@@ -174,6 +174,6 @@ body {
 
 #gallery #image-container .image-item img {
   height: 600px;
-  width: 600px;
+  width: 100%;
   background: #f4f4f4;
 }
